Projeto Prático 01 - Ajustes e Deploy

--- a/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/contato/contato.html
+++ b/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/contato/contato.html
@@ -130,6 +130,11 @@
                     ></iframe>
                 </section>
             </article>
+            <!-- Voltar Projetos -->
+
+            <a href="../../../index.html" class="botao-fixo"
+                >Voltar para Projetos</a
+            >
         </main>
 
         <!-- -->
