--- a/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/sobreNos/sobre-nos.html
+++ b/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/sobreNos/sobre-nos.html
@@ -149,6 +149,11 @@
                     <a href="../contato/contato.html">Contatos</a>
                 </div>
             </section>
+            <!-- Voltar Projetos -->
+
+            <a href="../../../index.html" class="botao-fixo"
+                >Voltar para Projetos</a
+            >
         </main>
 
         <!-- -->
