--- a/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/contato/contato.html
+++ b/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/contato/contato.html
@@ -132,7 +132,7 @@
             </article>
             <!-- Voltar Projetos -->
 
-            <a href="../../../index.html" class="botao-fixo"
+            <a href="../../../../index.html" class="botao-fixo"
                 >Voltar para Projetos</a
             >
         </main>
