--- a/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/sobreNos/sobre-nos.html
+++ b/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/sobreNos/sobre-nos.html
@@ -151,7 +151,7 @@
             </section>
             <!-- Voltar Projetos -->
 
-            <a href="../../../index.html" class="botao-fixo"
+            <a href="../../../../index.html" class="botao-fixo"
                 >Voltar para Projetos</a
             >
         </main>
