--- a/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/index.html
+++ b/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/index.html
@@ -103,7 +103,7 @@
             </section>
             <!-- Voltar Projetos -->
 
-            <a href="../../index.html" class="botao-fixo"
+            <a href="../../../index.html" class="botao-fixo"
                 >Voltar para Projetos</a
             >
         </main>
