--- a/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/servicos/servicos.html
+++ b/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/servicos/servicos.html
@@ -212,7 +212,7 @@
             </section>
             <!-- Voltar Projetos -->
 
-            <a href="../../../index.html" class="botao-fixo"
+            <a href="../../../../index.html" class="botao-fixo"
                 >Voltar para Projetos</a
             >
         </main>
